# WatchLLM

./: .env.example  .gitignore  justread.md  lettersglitch.txt  magicbento.txt  prismbg.txt  pyproject.toml  run_tests.py  watchllm-context.md  watchllm-gaps.txt  watchllm-landing-rebuild.html  watchllm-landing.html  watchllm_landing_v2.html  watchllm_landing_v3.html  watchllm_transform.py
watchllm/: README.md  __init__.py  index.html  middleware.ts  my_agent.py  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  transform_hero.py  wrangler.toml
watchllm/.wrangler/cache/: cf.json  wrangler-account.json
watchllm/.wrangler/tmp/bundle-WcD0f5/: middleware-insertion-facade.js  middleware-loader.entry.ts
watchllm/.wrangler/tmp/dev-nF2Gu1/: orchestrator_worker.js  orchestrator_worker.js.map
watchllm/api/: __init__.py  auth.py  clerk_webhook.py  schemas.py
watchllm/app/: globals.css  layout.tsx  page.module.css  page.tsx  robots.ts  sitemap.ts
watchllm/app/components/: LandingPageEffects.tsx  LiquidBackground.tsx  MagicBentoCard.tsx  Prism.tsx  PrismHero.tsx
watchllm/app/components/landing/: FeatureVisuals.tsx  HeroTerminal.tsx  LandingPage.tsx  LogoMark.tsx  SdkBlock.tsx
watchllm/app/dashboard/: Sidebar.tsx  layout.tsx  page.tsx
watchllm/app/dashboard/agents/: layout.tsx  page.tsx
watchllm/app/dashboard/failures/: layout.tsx  page.tsx
watchllm/app/dashboard/projects/: page.tsx
watchllm/app/dashboard/settings/: page.tsx
watchllm/app/docs/: page.tsx
watchllm/app/simulate/: layout.tsx
watchllm/cli/: main.py
watchllm/dashboard/components/: CostControlStrategy.tsx  FailureReplayViewer.tsx  SimulationProgressView.tsx
watchllm/dashboard/lib/: supabaseClient.ts
watchllm/docs/: quickstart.md
watchllm/landing/: Hero.tsx  index.tsx
watchllm/sdk/: chaos.py
watchllm/worker/: chaos_worker.ts  orchestrator_worker.ts
(+9 files in other folders)
