[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchllm"
version = "0.1.0"
description = "WatchLLM monorepo (SDK and CLI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.115.0,<1.0.0",
        "uvicorn>=0.30.0,<1.0.0",
	"PyJWT[crypto]>=2.10.1,<3.0.0",
	"sentry-sdk[fastapi]>=2.18.0,<3.0.0",
	"svix>=1.66.0,<2.0.0",
]

[project.scripts]
watchllm = "watchllm.cli.main:main"

[tool.setuptools]
py-modules = ["watchllm"]
packages = ["api", "cli", "sdk"]


